Episode 3: Some weird changes tracked, nothing really changed.

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -132,7 +132,7 @@
 .НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ
 
 Иван выходит из рощи, тащит одной рукой за ногу Солдата. На голове Солдата огромная шишка. Во второй руке Иван несёт ящик с инструментами.
-В самом центре двора стоит угрожающего вида катапульта. Иван уверенно тащит Солдата к ней. 
+В самом центре двора стоит угрожающего вида катапульта. Иван уверенно тащит Солдата к ней.
 Солдат поднимает голову и смотрит вперёд. Солдат видит, что на катапульте сидит какая-то странная сгорбленная фигура (ПАРЕНЬ-В-ЧЁРНОМ). Солдат приходит в ужас и начинает сопротивляться - скрести пальцами по земле, пытаясь помешать Ивану тащить его дальше, но Иван уверенно идёт вперёд, шаг за шагом приближаясь к катапульте.
 Иван останавливается возде катапульты и чешет затылок, как будто о чём-то задумашшись. На Парня-в-чёрном он не обращает внимания.
 Солдат с ужасом смотрит на Парня-в-чёрном. Парень-в-чёрном смотрит на Солдата сверху вниз.
@@ -228,10 +228,10 @@
 Пьёт из бокала.
 Ставит бокал на стол.
 Общий план комнаты. Иван сидит за компьютером (мы видим его только до пояса). Рядом с Иваном на столе стоит бутылка, на которой видна надпись «Квас».
-Рядом с компьютерным столом стоит внушительного вида устройство, напоминающее большую механическую руку или клешню. На столе и вокруг стола всё завалено какими-то запчастями, инструментами и деталями. 
+Рядом с компьютерным столом стоит внушительного вида устройство, напоминающее большую механическую руку или клешню. На столе и вокруг стола всё завалено какими-то запчастями, инструментами и деталями.
 Иван печатает что-то на компьютере, нажимает "Enter" и механическая рука-клешня делает несколько несуразных движений.
 Иван чешет голову и снова печатает.
-На столе рядом с Иваном лежит большой лист бумаги. На листе заглавие "Средство против тараканов", слово "тараканов" зачёркнуто и сверху подписано "агентов". Рядом стоит подпись - "(версия 3.0)". На листе изображена схема: - рука с механическим глазом (вебкамерой) обнаруживает солдата, ловит его и перекладывает на катапульту. 
+На столе рядом с Иваном лежит большой лист бумаги. На листе заглавие "Средство против тараканов", слово "тараканов" зачёркнуто и сверху подписано "агентов". Рядом стоит подпись - "(версия 3.0)". На листе изображена схема: - рука с механическим глазом (вебкамерой) обнаруживает солдата, ловит его и перекладывает на катапульту.
 Иван, снова берёт бутылку чтобы налить себе в стакан. Из бутылки выливается совсем чуть-чуть жидкости — бутылка пуста.
 
 ИВАН
@@ -296,7 +296,7 @@
 ИВАН
 Ага... Вот!
 
-Тянет руку к бутылке. 
+Тянет руку к бутылке.
 
 ИВАН
 Ну-ка...
@@ -356,7 +356,8 @@
 Иван с готовностью протягивает ему свою бутылку.
 
 КОЩЕЙ
-...бензинчику.
+
+...БЕНЗИНЧИКУ.
 
 ИВАН
 (недоверчиво)
@@ -402,12 +403,12 @@
 
 .ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ
 
-Иван берёт с одной из полок в подвале канистру и возвращается к Кощею. 
+Иван берёт с одной из полок в подвале канистру и возвращается к Кощею.
 
 .ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ
 
 Иван подставляет лестницу-стремянку (она стояла тут же в комнате где был заперт Кощей) и наливает Кощею в рот бензин.
-Кощей пьёт. Его глаза загораются, он смеётся страшным смехом. 
+Кощей пьёт. Его глаза загораются, он смеётся страшным смехом.
 
 КОЩЕЙ
 Ха-ха-ха-хаааа!
@@ -484,7 +485,7 @@
 
 ВОРОБУШЕК
 (с трудом шевелит клювом)
-Несчастье! Злой робот-трансформер похитил Марью Моревну. 
+Несчастье! Злой робот-трансформер похитил Марью Моревну.
 
 ИВАН
 (на фоне)
@@ -503,8 +504,8 @@
 (поднимает голову)
 И передай моей семье, что я их всех очень любил.
 
-Слышится вой сирен, с разных сторон подъезжают пожарные машины и машины скорой помощи. 
-Поднимается суматоха — пожарные начинают тушить пожар, к Воробушку подбегают врачи. 
+Слышится вой сирен, с разных сторон подъезжают пожарные машины и машины скорой помощи.
+Поднимается суматоха — пожарные начинают тушить пожар, к Воробушку подбегают врачи.
 
 ВРАЧ
 В сторону, в сторону! Ему нужен воздух!
@@ -540,20 +541,20 @@
 
 .НАТ. ДОРОГА
 
-Иван едет на своей машине по трассе. Пока он едет, на экране (вставками/перебивками) мелькают фрагменты, показывающие как он по пути навещает своих сестёр:
+Иван едет на своей машине по трассе. Пока он едет, на экране (вставками/перебивками) мелькают фрагменты, показывающие как он по/пути навещает своих сестёр:
 
-.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-ДОКТОРА 
+.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-ДОКТОРА
 
 СЕСТРА-ДОКТОР выходит со своим мужем - БИЗНЕСМЕНОМ - ему навстречу. Обнимает. Разговаривают о чём-то.
 
 .ИНТ. ДОМ СЕСТРЫ-МОНАШКИ
 
-Иван сидит за столом, СЕСТРА-МОНАШКА и её муж РЭППЕР сидят рядом. Иван кушает и о чём-то рассказывает им. Те грустно (сочувственно) молчат. 
+Иван сидит за столом, СЕСТРА-МОНАШКА и её муж РЭППЕР сидят рядом. Иван кушает и о чём-то рассказывает им. Те грустно (сочувственно) молчат.
 Иван вдруг улыбается и указывает на тарелку с едой и что-то говорит Сестре-Монашке, улыбаясь. Сестра-Монашка радуется и прыгает от радости.
 
 .НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-МЕХАНИКА
 
-Иван, СЕСТРА-МЕХАНИК и её муж РОКЕР стоят на крыльце дома. Иван спрашивает их о чём-то, они думают, но потом сокрушённо качают головой. 
+Иван, СЕСТРА-МЕХАНИК и её муж РОКЕР стоят на крыльце дома. Иван спрашивает их о чём-то, они думают, но потом сокрушённо качают головой.
 Рокер открывает перед Иваном чемоданчик. Иван кивает и забирает его.
 
 .НАТ. ДОРОГА
