Episode 3: Morevna gives key dialogue

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,4 +1,4 @@
-Ревизия: 2020.05
+Ревизия: 2020.06
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
 
@@ -200,7 +200,7 @@
 
 МАРЬЯ МОРЕВНА
 (достаёт ключи)
-Вот тебе ключи от всех дверей в доме. Можешь ходить куда угодно, но вот этот ключ не трогай и дверь, которую он отпирает не открывай.
+Вот тебе ключ от всех дверей в доме. Можешь ходить куда угодно, но в подвале есть большая железная дверь - её ни в коем случае не открывай.
 
 ИВАН
 А почему?
@@ -493,7 +493,7 @@
 
 ВОРОБУШЕК
 (продолжает)
-...И меня зацепило. Прощай, Иван-Царевич.
+И меня зацепило. Прощай, Иван-Царевич.
 
 Воробушек издыхает.
 
