Episode 3: Morevna gives key (v2)

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,4 +1,4 @@
-Ревизия: 2020.06
+Ревизия: 2020.07
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
 
@@ -200,7 +200,7 @@
 
 МАРЬЯ МОРЕВНА
 (достаёт ключи)
-Вот тебе ключ от всех дверей в доме. Можешь ходить куда угодно, но в подвале есть большая железная дверь - её ни в коем случае не открывай.
+Вот тебе ключ от всех дверей в доме. Можешь ходить куда угодно, но ту большую таинственную крутую дверь в подвале не открывай.
 
 ИВАН
 А почему?
